opam-version: "1.2"
name: "ocaml-basics"
maintainer: "Antoine Luciani <aluciani@advanced-schema.com>"
authors: "Advanced Schema"
homepage: "http://github.com/advanced-schema/ocaml-basics"
bug-reports: "http://github.com/advanced-schema/ocaml-basics/issues"
license: "MIT"
dev-repo: "https://github.com/advanced-schema/ocaml-basics.git"
build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {>= "1.0+beta16"}
  "result" {>= "1.2"}
]
available: [ ocaml-version >= "4.03" ]
